--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,6 +1,10 @@
----
-title: blog
-permalink: /blog/
----
-<h1>Welcome to My posts</h1>
-<p>This is the my personal page with custom content.</p>
+<!DOCTYPE html>
+<html lang="en">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
+
+  {% include head.html %}
+  <body>
+      {% include blog_header.html %}
+        {{ content }}
+      {% include footer.html %}
+  </body>
