--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -10,7 +10,7 @@
     <ul>
       <li> ReactJS Java Springboot Docker SQL </li>
     </ul>
-    <p> This is a full stack application built to manage trading stocks. The front-end is built using ReactJS and backend utilizes Springboot framework. The application is also containerized using docker. The image is uploaded to docker hub (https://hub.docker.com/) </p>
+    <p> This is a full stack application built to manage trading stocks.</p>
     <a class="project-link" href="https://github.com/JohnPHK/stock-trading-platform">Check it out</a>
   </div>
 </div>
