--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,7 +8,7 @@
   <div class="contents-right">
     <h3> stock-trading-platform </h3>
     <ul>
-      <li> ReactJS Java Springboot Docker SQL </li>
+      <li> React, Springboot, PostgreSQL, Docker  </li>
     </ul>
     <p> This is a full stack application built to manage trading stocks.</p>
     <a class="project-link" href="https://github.com/JohnPHK/stock-trading-platform">Check it out</a>
@@ -34,7 +34,7 @@
   <div class="contents-right">
     <h3> Bev For Sports </h3>
     <ul>
-      <li> JSP, J2EE Servlets, MySQL</li>
+      <li> JSP, J2EE Servlets, MySQL, Docker</li>
     </ul>
     <p> J2EE Application </p>
     <a class="project-link" href="https://github.com/JohnPHK/bev-for-sports">Check it out</a>
