--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,6 +2,6 @@
   <h1> About Me </h1>
   <div class="user-description">
     <img id="my_picture" alt="my_picture" src="{{ "/assets/img/my_picture.jpg" | prepend: site.baseurl }}">
-    <p> {{site.user_description}} </p>
+    <p id="user-description-paragraph"> {{site.user_description}} </p>
   </div>  
 </div>
