--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <footer class="footer">
-    <p>&copy; {{site.username}}</p>
+    <p>&copy; {{site.username}} </p>
+    <p> Jekyll Theme by <a href="http://jekyllthemes.org/themes/particle/">Particle Theme</a></p>
 </footer>
 <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script src="{{ "/assets/js/sweet-scroll.min.js" | prepend: site.baseurl }}"></script>
