--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,15 +5,18 @@
         <span class="site-description">{{site.user_title}}</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="Send email" href="#"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Github" target="_blank" href="https://github.com/JohnPHK"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
         <a aria-label="My LinkedIn" target="_blank" href="https://www.linkedin.com/in/hokyun-park-1956441a3/"><i class="icon fa fa-linkedin-square" aria-hidden="true"></i></a>
+        <a aria-label="My X" href="https://x.com/JohnPar93379539"><i class="icon fa fa-x-twitter" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
-        <a class="link" href="#about" data-scroll>About Me</a>
+        <a class="link" href="#about" data-scroll>About</a>
         <a class="link" href="#skills" data-scroll>Skills</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
-        <a class="link" href="{{ site.baseurl }}/blog/">Blog</a>
+        <a class="link" href="#contact" data-scroll>Contact</a>
+      </div>
+      <div class="blog-link">
+        <a class="link" href="{{ site.baseurl }}/blog/">Visit My Blog</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
