--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,7 @@
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
  @import url(https://fonts.googleapis.com/css?family=Montserrat);
+ @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css);
+ 
 html{
     line-height:1.15;
     -ms-text-size-adjust:100%;
