--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@
   <body>
       <div class="blog-header">
         <div class="blog-navigation">
-          <a href="/blog/" class="back-to-blog">← Back to Blog</a>
+          <a href="{{ site.baseurl }}/blog/" class="back-to-blog">← Back to Blog</a>
         </div>
         <h1>{{ page.title }}</h1>
         <p class="post-meta">
