Fixing flex issue with display flex

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,7 @@
  <div class="user-details">
   <h1> About Me </h1>
-  <div class="user-description">
-    <img id="my_picture" alt="my_picture" src="{{ "/assets/img/my_picture.jpg" | prepend: site.baseurl }}">
-    <p id="user-description-paragraph"> {{site.user_description}} </p>
-  </div>  
+</div>
+<div class="user">
+  <img id="my_picture" alt="my_picture" src="{{ "/assets/img/my_picture.jpg" | prepend: site.baseurl }}">
+  <p id="user-description-paragraph"> {{site.user_description}} </p>
 </div>
