--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3500,6 +3500,7 @@ sub,sup{
 #my_picture {
     max-width: 300px;
     border-radius: 50%;
+    margin-right: 50px;
 }
 #skills{
     width:90%;
@@ -3534,14 +3535,6 @@ sub,sup{
 .user-details{
     text-align:center;
     margin:5px auto
-}
-
-.user-description{
-    display: flex;
-    flex-direction: row;
-    justify-content: center; /* center the group horizontally */
-    align-items: center; 
-    gap: 50px; /* space between image and text */
 }
 
 #user-description-paragraph {
