Fixed link issue

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,8 +14,9 @@
         <a class="link" href="#skills" data-scroll>Skills</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
         <a class="link" href="#contact" data-scroll>Contact</a>
+        
       </div>
-      <div class="blog-link">
+      <div class="header-links">
         <a class="link" href="{{ site.baseurl }}/blog/">Visit My Blog</a>
       </div>
   </div>
